--- a/Loblaw Test/Base.lproj/Main.storyboard
+++ b/Loblaw Test/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Swifty News-->
         <scene sceneID="5RU-Y7-BJj">
             <objects>
-                <tableViewController title="Swifty News" id="GfI-VK-dtE" customClass="ViewController" customModule="Loblaw_Test" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Swifty News" id="GfI-VK-dtE" customClass="SwiftNewsMainViewController" customModule="Loblaw_Test" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="h5n-OW-m8U">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,31 +26,32 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9TT-DA-4OK">
-                                            <rect key="frame" x="20" y="64" width="194" height="83"/>
+                                            <rect key="frame" x="20" y="63.5" width="194" height="83.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="194" id="NGW-Tj-RwJ"/>
+                                                <constraint firstAttribute="width" constant="194" id="eLH-Tp-tri"/>
+                                                <constraint firstAttribute="height" constant="83.5" id="kTn-PU-6EK"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMo-4E-gA6">
-                                            <rect key="frame" x="20" y="11" width="393" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMo-4E-gA6">
+                                            <rect key="frame" x="20" y="11" width="337" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="gMo-4E-gA6" firstAttribute="leading" secondItem="9TT-DA-4OK" secondAttribute="leading" id="2wZ-Hz-62K"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="gMo-4E-gA6" secondAttribute="trailing" constant="-51" id="4hI-Cq-NXA"/>
-                                        <constraint firstItem="gMo-4E-gA6" firstAttribute="leading" secondItem="Vwu-sk-aQm" secondAttribute="leadingMargin" id="Amj-5R-YXm"/>
-                                        <constraint firstItem="9TT-DA-4OK" firstAttribute="leading" secondItem="Vwu-sk-aQm" secondAttribute="leading" constant="20" symbolic="YES" id="LVn-MA-A9L"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="9TT-DA-4OK" secondAttribute="bottom" constant="5" id="bX9-Vl-gnn"/>
-                                        <constraint firstItem="gMo-4E-gA6" firstAttribute="top" secondItem="Vwu-sk-aQm" secondAttribute="topMargin" id="guP-Sj-8rI"/>
-                                        <constraint firstItem="9TT-DA-4OK" firstAttribute="top" secondItem="gMo-4E-gA6" secondAttribute="bottom" constant="32" id="m80-8z-Nhd"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="gMo-4E-gA6" secondAttribute="trailing" constant="5" id="CZs-Hv-MNB"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="9TT-DA-4OK" secondAttribute="bottom" constant="5" id="G7J-MK-EIM"/>
+                                        <constraint firstItem="gMo-4E-gA6" firstAttribute="top" secondItem="Vwu-sk-aQm" secondAttribute="topMargin" id="fm7-OZ-Rg5"/>
+                                        <constraint firstItem="9TT-DA-4OK" firstAttribute="top" secondItem="gMo-4E-gA6" secondAttribute="bottom" constant="32" id="gJr-je-dsv"/>
+                                        <constraint firstItem="gMo-4E-gA6" firstAttribute="leading" secondItem="Vwu-sk-aQm" secondAttribute="leadingMargin" id="icp-uf-1xT"/>
+                                        <constraint firstItem="gMo-4E-gA6" firstAttribute="leading" secondItem="9TT-DA-4OK" secondAttribute="leading" id="yEs-rJ-ZbT"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="newsItemImage" destination="9TT-DA-4OK" id="yLz-Ie-gbq"/>
                                     <outlet property="newsItemTextLabel" destination="gMo-4E-gA6" id="b2F-Yk-D2m"/>
+                                    <outlet property="thumbNailHeightConstraint" destination="kTn-PU-6EK" id="e1S-dC-r9Z"/>
                                     <segue destination="piG-Pr-PVO" kind="show" identifier="toDetailSelectSegue" id="guT-8C-YsT"/>
                                     <segue destination="piG-Pr-PVO" kind="show" identifier="toDetailAccessorySegue" trigger="accessoryAction" id="zw4-0P-lfD"/>
                                 </connections>
@@ -74,14 +75,43 @@
                     <view key="view" contentMode="scaleToFill" id="iL3-yI-1my">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ipd-z1-jlD">
+                                <rect key="frame" x="20" y="88" width="374" height="225"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="225" id="DYK-dO-q6R"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0N8-g6-PUU">
+                                <rect key="frame" x="20" y="321" width="374" height="524"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="8Di-8y-BzD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ipd-z1-jlD" firstAttribute="trailing" secondItem="iL3-yI-1my" secondAttribute="trailingMargin" id="0d6-jF-a8W"/>
+                            <constraint firstItem="Ipd-z1-jlD" firstAttribute="top" secondItem="8Di-8y-BzD" secondAttribute="top" id="C1m-qW-lCd"/>
+                            <constraint firstItem="Ipd-z1-jlD" firstAttribute="leading" secondItem="iL3-yI-1my" secondAttribute="leadingMargin" id="Mbh-OB-YHV"/>
+                            <constraint firstItem="Ipd-z1-jlD" firstAttribute="leading" secondItem="0N8-g6-PUU" secondAttribute="leading" id="Y5e-Zo-diQ"/>
+                            <constraint firstItem="Ipd-z1-jlD" firstAttribute="trailing" secondItem="0N8-g6-PUU" secondAttribute="trailing" id="dZn-Rs-YOH"/>
+                            <constraint firstItem="0N8-g6-PUU" firstAttribute="top" secondItem="Ipd-z1-jlD" secondAttribute="bottom" constant="8" id="fvI-GB-TRo"/>
+                            <constraint firstItem="8Di-8y-BzD" firstAttribute="bottom" secondItem="0N8-g6-PUU" secondAttribute="bottom" constant="17" id="wjY-JP-wIf"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Bwn-l4-fHa"/>
+                    <connections>
+                        <outlet property="articleTextView" destination="0N8-g6-PUU" id="9Wz-vh-vBn"/>
+                        <outlet property="thumbNailImage" destination="Ipd-z1-jlD" id="GgE-nM-BDx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ct-Gy-dTW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="686" y="41"/>
+            <point key="canvasLocation" x="685.50724637681162" y="40.848214285714285"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9jq-dg-mrq">
@@ -104,6 +134,9 @@
         <segue reference="zw4-0P-lfD"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
