--- a/Loblaw Test/Base.lproj/Main.storyboard
+++ b/Loblaw Test/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ipd-z1-jlD">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ipd-z1-jlD">
                                 <rect key="frame" x="20" y="88" width="374" height="225"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="225" id="DYK-dO-q6R"/>
